cmake tidy cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,8 +129,10 @@ add_subdirectory(Engine/libsrc/glad             EXCLUDE_FROM_ALL)
 add_subdirectory(Engine/libsrc/hq2x             EXCLUDE_FROM_ALL)
 add_subdirectory(Engine/libsrc/libcda-0.5       EXCLUDE_FROM_ALL)
 
+add_subdirectory(libsrc/tinyalloc      EXCLUDE_FROM_ALL)
+
 add_subdirectory(Engine)
 
-add_subdirectory(Compiler)
+# add_subdirectory(Compiler)
 
 set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ags)
