--- a/Engine/libsrc/dumb-0.9.2/CMakeLists.txt
+++ b/Engine/libsrc/dumb-0.9.2/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(aldumb)
 
 set_target_properties(aldumb PROPERTIES
+    CXX_STANDARD 11
+    CXX_EXTENSIONS NO
     C_STANDARD 11
     C_EXTENSIONS NO
 )
