--- a/Android2/AGSGameLauncher/app/build.gradle
+++ b/Android2/AGSGameLauncher/app/build.gradle
@@ -12,7 +12,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags "-std=c++11"
+                arguments "-DBUILD_SHARED_LIBS=YES"
             }
         }
     }
@@ -22,10 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    // https://google.github.io/android-gradle-dsl/current/com.android.build.gradle.internal.dsl.ExternalNativeCmakeOptions.html
     externalNativeBuild {
         cmake {
-            path "src/main/cpp/CMakeLists.txt"
-            version "3.10.2"
+//            path "src/main/cpp/CMakeLists.txt"
+//            version "3.10.2"
+            path "../../../CMakeLists.txt"
+            version "3.14.5"
+
         }
     }
 }
