alogg: minor fixes

--- a/Engine/libsrc/alogg/CMakeLists.txt
+++ b/Engine/libsrc/alogg/CMakeLists.txt
@@ -14,4 +14,14 @@ target_sources(alogg
 
 target_link_libraries(alogg PUBLIC Allegro::Allegro Vorbis::Vorbis Vorbis::VorbisFile)
 
+# for consider for future tremor support:
+# if (ALOGG_USE_TREMOR)
+# target_link_libraries(alogg PUBLIC Tremor::Tremor)
+# target_compile_definitions(alogg PRIVATE USE_TREMOR)
+# endif()
+
+if (WIN32 AND BUILD_SHARED_LIBS)
+    target_compile_definitions(alogg INTERFACE ALOGG_DLL)
+endif()
+
 add_library(AlOgg::AlOgg ALIAS alogg)
