--- a/Android2/AGSGameLauncher/app/src/main/AndroidManifest.xml
+++ b/Android2/AGSGameLauncher/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <uses-feature android:glEsVersion="0x00010000" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
