alfont: add missing ALFONT_LINUX define. needed? who knows

--- a/Common/libsrc/alfont-2.0.9/CMakeLists.txt
+++ b/Common/libsrc/alfont-2.0.9/CMakeLists.txt
@@ -15,4 +15,8 @@ target_sources(alfont
 
 target_link_libraries(alfont PUBLIC Allegro::Allegro FreeType::FreeType)
 
+if(NOT WIN32)
+    target_compile_definitions(alfont PRIVATE ALFONT_LINUX)
+endif()
+
 add_library(AlFont::AlFont ALIAS alfont)
