android: experiment with using tremor again in android

--- a/Android2/AGSGameLauncher/app/build.gradle
+++ b/Android2/AGSGameLauncher/app/build.gradle
@@ -12,7 +12,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                arguments "-DBUILD_SHARED_LIBS=YES"
+                arguments "-DBUILD_SHARED_LIBS=YES", "-DAGS_USE_TREMOR=YES"
             }
         }
     }
