cmake: small changes for android
- invert colours for android
- add build option for tremor
- link to glad-es2, glm
- link to plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ project(AGS
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
 option(AGS_NO_MP3_PLAYER "Disable MP3" OFF)
+option(AGS_USE_TREMOR "Use the tremor library as alternative to vorbis" OFF)
 option(AGS_NO_VIDEO_PLAYER "Disable Video" OFF)
 option(AGS_BUILTIN_PLUGINS "Built in plugins" OFF)
 set(AGS_BUILD_STR "" CACHE STRING "Engine Build Information")
@@ -24,6 +25,8 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     set(LINUX TRUE)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(MACOS TRUE)
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Android")
+    set(ANDROID TRUE)
 else()
     message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}")
 endif ()
@@ -111,9 +114,14 @@ elseif (LINUX)
     find_package(X11)
 endif()
 
-include(FetchAllegro)
+add_subdirectory(Common/libsrc/allegro EXCLUDE_FROM_ALL)
+
 include(FetchOgg)
-include(FetchVorbis)
+if(AGS_USE_TREMOR)
+    add_subdirectory(Engine/libsrc/tremor-r19427    EXCLUDE_FROM_ALL)
+else()
+    include(FetchVorbis)
+endif()
 include(FetchTheora)
 
 add_subdirectory(Common/libsrc/aastr-0.1.1      EXCLUDE_FROM_ALL)
@@ -125,10 +133,27 @@ add_subdirectory(Engine/libsrc/almp3-2.0.5      EXCLUDE_FROM_ALL)
 add_subdirectory(Engine/libsrc/alogg            EXCLUDE_FROM_ALL)
 add_subdirectory(Engine/libsrc/apeg-1.2.1       EXCLUDE_FROM_ALL)
 add_subdirectory(Engine/libsrc/dumb-0.9.2       EXCLUDE_FROM_ALL)
-add_subdirectory(Engine/libsrc/glad             EXCLUDE_FROM_ALL)
+if (NOT ANDROID)
+    add_subdirectory(Engine/libsrc/glad             EXCLUDE_FROM_ALL)
+else()
+    add_subdirectory(Engine/libsrc/glad-gles2       EXCLUDE_FROM_ALL)
+endif()
 add_subdirectory(Engine/libsrc/hq2x             EXCLUDE_FROM_ALL)
 add_subdirectory(Engine/libsrc/libcda-0.5       EXCLUDE_FROM_ALL)
 
+SET(GLM_TEST_ENABLE OFF CACHE BOOL "GLM Build unit tests")
+add_subdirectory(Engine/libsrc/glm-0.9.9.6      EXCLUDE_FROM_ALL)
+add_library(GLM::GLM ALIAS glm_static)
+
 add_subdirectory(Engine)
+
+add_subdirectory(Plugins/AGSSpriteFont)
+add_subdirectory(Plugins/AGSflashlight)
+add_subdirectory(Plugins/ags_parallax)
+add_subdirectory(Plugins/ags_snowrain)
+add_subdirectory(Plugins/agsblend)
+# add_subdirectory(Plugins/agslua)
+add_subdirectory(Plugins/agspalrender)
+add_subdirectory(Plugins/agstouch)
 
 set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ags)
