--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -561,7 +561,6 @@ endif()
 target_link_libraries(engine PUBLIC 
     AGS::Common 
     ${CMAKE_DL_LIBS} 
-    Glad::Glad 
     Threads::Threads 
     Allegro::Allegro 
     AlDumb::AlDumb 
@@ -569,10 +568,31 @@ target_link_libraries(engine PUBLIC
     AlOgg::AlOgg 
     HQ2X::hq2x
     Cda::Cda
+    GLM::GLM
 )
 
+if (ANDROID)
+    target_link_libraries(engine PUBLIC 
+        log 
+        EGL
+        # GLESv1_CM 
+        GLESv2
+        Glad::GladGLES2
+    )
+    target_compile_definitions(engine PRIVATE 
+        AGS_INVERTED_COLOR_ORDER
+    )
+endif()
+
+if (NOT ANDROID)
+    target_link_libraries(engine PUBLIC 
+        Glad::Glad
+    )
+endif()
+
 # common has a circular dependency on engine
-target_link_libraries(common PUBLIC engine)
+# TODO: currently required for gcc support, will look into this.
+# target_link_libraries(common PUBLIC engine)
 
 if (WIN32 OR LINUX)
     target_compile_definitions(engine PRIVATE AGS_HAS_CD_AUDIO)
@@ -601,6 +621,8 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/.. PREFIX "Source Files" FILES ${E
 # Standalone exe
 # -----------------------------------------------------------------------------
 
+if (NOT ANDROID)
+
 add_executable(ags)
 
 set_target_properties(ags PROPERTIES
@@ -615,7 +637,7 @@ target_sources(ags
     main/main_allegro.cpp
 )
 
-target_link_libraries(ags PRIVATE engine)
+target_link_libraries(ags PRIVATE engine Allegro::Main)
 
 if (LINUX)
     # We may override `allegro_icon` and `load_midi_pf` depending on the version
@@ -634,11 +656,13 @@ if (WIN32)
     )
 endif()
 
+endif()
+
 
 # macOS App Bundle
 # -----------------------------------------------------------------------------
 
-if (MACOS)
+if (MACOS AND NOT ANDROID)
     add_executable(ags-app)
 
     set_target_properties(ags-app PROPERTIES
@@ -665,7 +689,7 @@ if (MACOS)
         ${RESOURCE_FILES}
     )
 
-    target_link_libraries(ags-app PRIVATE engine)
+    target_link_libraries(ags-app PRIVATE engine Allegro::Main)
 
     set_target_properties(ags-app PROPERTIES
         RUNTIME_OUTPUT_NAME AGS
