--- a/Android/.gitignore
+++ b/Android/.gitignore
@@ -1,15 +1,14 @@
-# Android output and temporary files
-*/*~
-launcher_list/.classpath
-launcher_list/.settings/
-launcher_list/bin/
-launcher_list/gen/
-launcher_list/local.properties
-library/.settings/
-library/bin/
-library/gen/
-library/libs/
-library/obj/
-library/local.properties
-library/.classpath
-nativelibs
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
